pkg/crates/abacus-core/src/llm/providers/snapshots/abacus_core__llm__providers__deepseek__tests__snapshot_deepseek_reasoner_effort_high.snap
---
source: crates/abacus-core/src/llm/providers/deepseek.rs
assertion_line: 1094
expression: snapshot_deepseek_fields(&body)
---
{
  "model": "deepseek-reasoner",
  "reasoning_effort": "high",
  "stream": false,
  "thinking": {
    "type": "enabled"
  }
}
