pkg/crates/abacus-core/src/llm/providers/snapshots/abacus_core__llm__providers__deepseek__tests__snapshot_deepseek_v4_flash_thinking_disabled.snap
---
source: crates/abacus-core/src/llm/providers/deepseek.rs
assertion_line: 1224
expression: snapshot_deepseek_fields(&body)
---
{
  "model": "deepseek-v4-flash",
  "reasoning_effort": null,
  "stream": false,
  "thinking": {
    "type": "disabled"
  }
}
