pkg/crates/abacus-core/src/llm/providers/snapshots/abacus_core__llm__providers__deepseek__tests__snapshot_deepseek_v4_pro_effort_low.snap
---
source: crates/abacus-core/src/llm/providers/deepseek.rs
assertion_line: 1147
expression: snapshot_deepseek_fields(&body)
---
{
  "model": "deepseek-v4-pro",
  "reasoning_effort": "high",
  "stream": false,
  "thinking": {
    "type": "enabled"
  }
}
